TS-6 add api auth (#10)
* TS-6 add api auth

* TS-6 fix before_action
