# swagger/v1/swagger.yaml
@@ -77,14 +77,33 @@ paths:
       responses:
         '200':
           description: successful
+  "/api/profiles/{id}/toggle":
+    parameters:
+    - name: id
+      in: path
+      description: id
+      required: true
+      schema:
+        type: string
+    post:
+      summary: toggle profile
+      tags:
+      - Profiles
+      responses:
+        '200':
+          description: successful
   "/api/profiles":
     get:
       summary: list profiles
+      tags:
+      - Profiles
       responses:
         '200':
           description: successful
     post:
       summary: create profile
+      tags:
+      - Profiles
       responses:
         '200':
           description: successful
@@ -98,27 +117,85 @@ paths:
         type: string
     get:
       summary: show profile
+      tags:
+      - Profiles
       responses:
         '200':
           description: successful
     patch:
       summary: update profile
+      tags:
+      - Profiles
       responses:
         '200':
           description: successful
     put:
       summary: update profile
+      tags:
+      - Profiles
       responses:
         '200':
           description: successful
     delete:
       summary: delete profile
+      tags:
+      - Profiles
+      responses:
+        '200':
+          description: successful
+  "/api/users/sign_in":
+    post:
+      summary: create authentication
+      tags:
+      - Users
+      responses:
+        '200':
+          description: successful
+  "/api/users/sign_out":
+    delete:
+      summary: delete authentication
+      tags:
+      - Users
+      responses:
+        '200':
+          description: successful
+  "/api/users/passwords":
+    patch:
+      summary: update password
+      tags:
+      - Users
+      responses:
+        '200':
+          description: successful
+  "/api/users/sign_up":
+    post:
+      summary: create registration
+      tags:
+      - Users
+      responses:
+        '200':
+          description: successful
+  "/api/users/delete":
+    delete:
+      summary: delete registration
+      tags:
+      - Users
+      responses:
+        '200':
+          description: successful
+  "/api/users/tokens":
+    post:
+      summary: create token
+      tags:
+      - Users
       responses:
         '200':
           description: successful
   "/api/me":
     get:
       summary: show user
+      tags:
+      - Users
       responses:
         '200':
           description: successful
